add comment api and documentation :fire:
