# config/routes.rb
@@ -11,8 +11,10 @@ Rails.application.routes.draw do
       namespace :admin do
         resources :categories
       end
-      resources :posts
+      resources :posts do
+        resources :comments, except: %w(show update destroy)
+      end
+      resources :comments, only: %w(update destroy)
     end
   end
-
 end
