# swagger/v1/user/swagger.json
@@ -5,6 +5,170 @@
     "version": "v1"
   },
   "paths": {
+    "/api/v1/posts/{post_id}/comments": {
+      "get": {
+        "summary": "Comments from a post",
+        "tags": [
+          "Comments"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "post_id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Collection from comments from a post"
+          },
+          "404": {
+            "description": "Post no found"
+          }
+        }
+      },
+      "post": {
+        "summary": "Create comment for a post",
+        "tags": [
+          "Comments"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "post_id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "comment",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "properties": {
+                    "content": {
+                      "type": "string"
+                    },
+                    "user_id": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "content",
+                    "user_id"
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Comment created"
+          },
+          "422": {
+            "description": "Invalid request"
+          },
+          "404": {
+            "description": "Post no found"
+          }
+        }
+      }
+    },
+    "/api/v1/comments/{id}": {
+      "put": {
+        "summary": "Update comment",
+        "tags": [
+          "Comments"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "comment",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "properties": {
+                    "content": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "content"
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comment updated"
+          },
+          "422": {
+            "description": "Invalid request"
+          },
+          "404": {
+            "description": "Comment no found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete comment",
+        "tags": [
+          "Comments"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Comment deleted"
+          },
+          "404": {
+            "description": "Comment no found"
+          }
+        }
+      }
+    },
     "/api/v1/posts": {
       "get": {
         "summary": "All posts",
